[package]
name = "yabai"
version = "0.3.2"
edition = "2021"
license = "MIT"
keywords = ["yabai"]
categories = ["api-bindings", "command-line-utilities"]
description = "A Rust library for communicating with the yabai tiling window manager."
repository = "https://github.com/sudosilico/yabai.rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
serde_json = "1.0"
anyhow = "1.0"
byteorder = "1.5.0"
thiserror = "1.0.49"
lazy_static = "1.4.0"
